lookin oh so snazzy

--- a/src/components/header/menu-btn.scss
+++ b/src/components/header/menu-btn.scss
@@ -22,7 +22,7 @@
 
   .btn-line {
     height: 4px;
-    background-color: white;
+    background-color: $secondary-color;
     margin: 6px;
     width: 30px;
 
