--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -1,7 +1,5 @@
-$primary-color: rgb(0, 119, 255);
-$primary-dark: darken($primary-color, 10);
-$secondary-color: #FF3262;
-$secondary-dark: #CC284E;
+$primary-color: rgb(37, 37, 37);
+$secondary-color: rgb(0, 98, 255);
 
 $dark: #444;
 $light: #ddd;
