--- a/src/components/post/Post.scss
+++ b/src/components/post/Post.scss
@@ -1,37 +1,66 @@
 @import '../../utils.scss';
 
 .post {
-  width: 100%;
-  margin-bottom: 2.5rem;
+  display: flex;
+  flex-wrap: wrap;
 
   .post-header {
+    width: 100%;
     display: flex;
+    background-color: $primary-color;
     align-items: baseline;
     padding: 1rem;
-    background-color: $secondary-color;
     // border-bottom: 5px solid $secondary-dark;
-    border-radius: 5px 5px 0 0;
+    // border-radius: 5px 5px 0 0;
     
-    .post-title {
-      color: white;
-      margin-top: 0.1rem;
-      margin-right: auto;
-      text-decoration: underline;
-    }
 
     .author-link {
-      margin-left: 10px;
+      margin-left: auto;
       color: $light;
+    }
+  }
+
+  .post-controls {
+    width: 10%;
+    background-color: $secondary-color;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    svg {
+      display: block;
+      margin: 0.7rem 0;
     }
   }
   
   .post-content {
-    background-color: $light;
-    padding: 1.5rem;
-    line-height: 1.5;
-    border: 2px solid $light;
-    border-radius: 0 0 10px 10px;
-    white-space: pre-wrap;
-    background: white;
+    width: 90%;
+    padding: 0.5rem 1.5rem;
+    line-height: 2;
+    border: solid;
+    border-width: 0 0.5rem 0 0;
+    border-color: $secondary-color;
+    white-space: pre-line;
+
+    p {
+      font-family: Arial, Helvetica, sans-serif;
+      color: white;
+      margin-bottom: 1.5rem;
+    }
+
+    &.short {
+      p {
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
+        max-height: 30vh;
+      }
+    }
+
+    .post-title {
+      margin: 1rem 0;
+    }
   }
+
 }
