--- a/src/components/postList/PostList.scss
+++ b/src/components/postList/PostList.scss
@@ -1,20 +1,21 @@
 @import '../../utils.scss';
 
-main#PostList {
-  padding: 0 1rem;
+.postList {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 2rem;
+}
 
-  .page-title {
-    padding: 1rem 2rem;
-    margin: 1rem 0;
-    background: $light;
-    border-radius: 5px;
-    // color: white;
-  }
+// React Transition Group
 
-  .postList {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0 2rem;
-  }
+.page-item-appear {
+  opacity: 0;
+  transform: translate(-100%, 0);
+  transition: all 700ms ease-out;
+}
+
+.page-item-appear-active {
+  opacity: 1;
+  transform: translate(0, 0);
 }
