raised menu z-index

--- a/src/components/header/menu-btn.scss
+++ b/src/components/header/menu-btn.scss
@@ -22,7 +22,7 @@
 
   .btn-line {
     height: 4px;
-    background-color: $secondary-color;
+    background-color: lighten($secondary-color, 5);
     margin: 6px;
     width: 30px;
 
