--- a/src/components/header/menu.scss
+++ b/src/components/header/menu.scss
@@ -7,8 +7,9 @@
   left: 0;
   display: flex;
   flex-direction: column;
-  padding: 1.2rem 2.5rem;
+  padding: 1.2rem 2.5rem 1.6rem 2.5rem;
   background-color: lighten($color: $primary-color, $amount: 10);
+  z-index: 2;
   @include easeOut;
 
   &.show {
