--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -1,5 +1,6 @@
 $primary-color: rgb(37, 37, 37);
 $secondary-color: rgb(0, 98, 255);
+$third-color: rgb(255, 136, 0);
 
 $dark: #444;
 $light: #ddd;
