--- a/src/components/post/Post.scss
+++ b/src/components/post/Post.scss
@@ -10,13 +10,18 @@
     background-color: $primary-color;
     align-items: baseline;
     padding: 1rem;
-    // border-bottom: 5px solid $secondary-dark;
-    // border-radius: 5px 5px 0 0;
     
-
     .author-link {
       margin-left: auto;
       color: $light;
+    }
+
+    svg {
+      @include easeOut;
+
+      &:hover {
+        color: $secondary-color;
+      }
     }
   }
 
@@ -28,9 +33,16 @@
     justify-content: center;
     align-items: center;
 
+    .btn {
+      height: 4rem;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
     svg {
       display: block;
-      margin: 0.7rem 0;
     }
   }
   
@@ -38,9 +50,7 @@
     width: 90%;
     padding: 0.5rem 1.5rem;
     line-height: 2;
-    border: solid;
-    border-width: 0 0.5rem 0 0;
-    border-color: $secondary-color;
+    border-right: 5px solid $secondary-color;
     white-space: pre-line;
 
     p {
@@ -62,5 +72,4 @@
       margin: 1rem 0;
     }
   }
-
 }
