--- a/src/utils.scss
+++ b/src/utils.scss
@@ -1,6 +1,10 @@
 @import "sass/colors.scss";
 @import "sass/fonts.scss";
 
+// global vars
+
+$header-height: 5rem;
+
 // mixins
 
 @mixin easeOut {
