--- a/src/components/header/menu.scss
+++ b/src/components/header/menu.scss
@@ -13,7 +13,7 @@
   background-color: lighten($color: $primary-color, $amount: 10);
 
   border-top: 4px solid $secondary-color;
-  border-bottom: 4px solid $third-color;
+  border-bottom: 4px solid $secondary-color;
 
   transform-origin: top;
   transform: scaleY(0);
