--- a/src/components/header/menu.scss
+++ b/src/components/header/menu.scss
@@ -12,8 +12,19 @@
 
   background-color: lighten($color: $primary-color, $amount: 10);
 
-  border-top: 4px solid $secondary-color;
-  border-bottom: 4px solid $secondary-color;
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-top: 4px solid $secondary-color;
+    border-bottom: 4px solid $secondary-color;
+    box-sizing: border-box;
+    transform: scaleX(0);
+    transform-origin: left;
+  }
 
   transform-origin: top;
   transform: scaleY(0);
@@ -21,6 +32,12 @@
 
   &.show {
     transform: scaleY(1);
+
+    &::after {
+      transform: scaleX(1);
+      transition: transform 2s;
+      transition-delay: 0.5s;
+    }
   }
 
   .nav-link-list {
