changed menu ::after to menu ::before

--- a/src/components/header/menu.scss
+++ b/src/components/header/menu.scss
@@ -12,7 +12,7 @@
 
   background-color: lighten($color: $primary-color, $amount: 10);
 
-  &::after {
+  &::before {
     content: '';
     position: absolute;
     left: 0;
@@ -33,7 +33,7 @@
   &.show {
     transform: scaleY(1);
 
-    &::after {
+    &::before {
       transform: scaleX(1);
       transition: transform 2s;
       transition-delay: 0.5s;
@@ -48,10 +48,9 @@
       margin: 0.8rem 0;
       opacity: 0;
       transform: translate(0, -2rem);
-      color: white;
-      cursor: pointer;
-      transition-delay: 0s;
+
       @include easeOut;
+      transition-delay: 0s;
       transition-duration: 0.1s;
 
       &.show {
@@ -61,11 +60,15 @@
         transition-duration: 0.5s;
       }
 
-      &:hover {
-        text-decoration: underline;
-        color: $secondary-color;
-        transition-delay: 0ms;
-        transition-duration: 0.2s;
+      a {
+        cursor: pointer;
+        @include easeOut;
+
+        &:hover {
+          color: $secondary-color;
+          transition-delay: 0ms;
+          transition-duration: 0.2s;
+        }
       }
     }
   }
