--- a/src/sass/colors.scss
+++ b/src/sass/colors.scss
@@ -2,5 +2,4 @@ $primary-color: rgb(37, 37, 37);
 $secondary-color: rgb(0, 98, 255);
 $third-color: rgb(255, 136, 0);
 
-$dark: #444;
-$light: #ddd;
+$success: rgb(51, 219, 79);
