--- a/src/components/page/messages/Messages.scss
+++ b/src/components/page/messages/Messages.scss
@@ -5,16 +5,17 @@
   padding-bottom: 0;
 
   p {
-    padding: 0 2rem;
-    background-color: $success;
+    padding: 0 1.5rem;
+    border-left: 8px solid $success;
+    background-color: lighten($primary-color, 5);
     font-weight: bold;
-    color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    box-shadow: none;
 
     &:hover {
-      box-shadow: 2px 2px 2px lighten($primary-color, 5);
+      box-shadow: 2px 2px 0 $primary-color;
       button {
         color: white;
       }
@@ -24,7 +25,7 @@
       margin-top: 5px;
       width: 2rem;
       height: 2rem;
-      color: darken($color: white, $amount: 20);
+      color: lighten($primary-color, 10);
 
       &:hover {
         color: $primary-color;
