added login page, fake AuthContext, and UIContext to control menu

--- a/src/components/page/messages/Messages.scss
+++ b/src/components/page/messages/Messages.scss
@@ -38,6 +38,16 @@
   }
 }
 
+.message-transition-arrive {
+  opacity: 0;
+  transform: scale(0);
+}
+
+.message-transition-arrive-active {
+  opacity: 1;
+  transform: scale(1);
+}
+
 .message-transition-exit {
   opacity: 1;
   transform: scale(1);
