--- a/src/index.scss
+++ b/src/index.scss
@@ -53,7 +53,7 @@ button {
   border: none;
   color: inherit;
   font-family: inherit;
-  font-size: 1rem;
+  font-size: inherit;
   background: none;
   width: auto;
   height: auto;
