--- a/src/components/page/Page.scss
+++ b/src/components/page/Page.scss
@@ -19,3 +19,14 @@ main#page-main {
   opacity: 1;
   transform: translate(0, 0);
 }
+
+.page-item-enter {
+  opacity: 0;
+  transform: translate(-100%, 0);
+  transition: all 700ms ease-out;
+}
+
+.page-item-enter-active {
+  opacity: 1;
+  transform: translate(0, 0);
+}
