--- a/src/components/page/messages/Messages.scss
+++ b/src/components/page/messages/Messages.scss
@@ -6,7 +6,7 @@
 
   p {
     padding: 0 1.5rem;
-    border-left: 8px solid $success;
+    border-left: 8px solid black;
     background-color: lighten($primary-color, 5);
     font-weight: bold;
     display: flex;
@@ -31,26 +31,50 @@
         color: $primary-color;
       }
     }
+
   }
 
-  .closed {
-    display: none;
+  &-success p {
+    border-color: $success;
   }
+
+  &-info p {
+    border-color: $info;
+  }
+
+  // .closed {
+  //   display: none;
+  // }
 }
 
 .message-transition-appear {
   opacity: 0;
   transform: scale(0);
+  @include easeOut;
 }
 
 .message-transition-appear-active {
   opacity: 1;
   transform: scale(1);
+  @include easeOut;
+}
+
+.message-transition-enter {
+  opacity: 0;
+  transform: scale(0);
+  @include easeOut;
+}
+
+.message-transition-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  @include easeOut;
 }
 
 .message-transition-exit {
   opacity: 1;
   transform: scale(1);
+  @include easeOut;
 }
 
 .message-transition-exit-active {
