--- a/src/components/post/Post.scss
+++ b/src/components/post/Post.scss
@@ -1,11 +1,14 @@
 @import '../../utils.scss';
 
 .post {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+
+  width: 100vw;
+
+  grid-template-columns: 3rem 1fr;
 
   .post-header {
-    width: 100%;
+    grid-column: 1 / 3;
     display: flex;
     background-color: $primary-color;
     align-items: baseline;
@@ -17,6 +20,7 @@
     }
 
     svg {
+      margin-right: 15px;
       @include easeOut;
 
       &:hover {
@@ -26,7 +30,6 @@
   }
 
   .post-controls {
-    width: 10%;
     background-color: $secondary-color;
     display: flex;
     flex-direction: column;
@@ -37,21 +40,23 @@
       height: 4rem;
       width: 100%;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-    }
+      justify-content: center;
 
-    svg {
-      display: block;
+      svg {
+        display: block;
+        margin: 8px 0;
+      }
     }
   }
   
   .post-content {
-    width: 90%;
     padding: 0.5rem 1.5rem;
     line-height: 2;
     border-right: 5px solid $secondary-color;
     white-space: pre-line;
+    min-width: 0; // prevent overflow in grid column
 
     p {
       font-family: Arial, Helvetica, sans-serif;
@@ -71,5 +76,10 @@
     .post-title {
       margin: 1rem 0;
     }
+  }
+
+  .post-footer {
+    width: 100%;
+    padding: 0.5rem;
   }
 }
