added PostList by user page

--- a/src/components/post/Post.scss
+++ b/src/components/post/Post.scss
@@ -14,7 +14,7 @@
     align-items: baseline;
     padding: 1rem;
     
-    .author-link {
+    a {
       margin-left: auto;
       color: darken($color: white, $amount: 20)
     }
