--- a/src/components/pages/notFound/NotFound.scss
+++ b/src/components/pages/notFound/NotFound.scss
@@ -1,6 +1,11 @@
 @import '../../../utils.scss';
 
-#page-main.page-not-found {
+.backbutton {
+  margin: 2rem 10vw;
+  font-size: 2rem;
+}
+
+.billboard {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -8,7 +13,7 @@
   text-align: center;
   height: 12rem;
 
-  margin: 10rem 10vw;
+  margin: 0 10vw;
   border: 4px solid $secondary-color;
 
   h4 {
