--- a/src/components/pages/postUpdate/PostUpdate.scss
+++ b/src/components/pages/postUpdate/PostUpdate.scss
@@ -28,7 +28,7 @@
 
   .content-input {
     width: 100%;
-    height: 30vh;
+    height: 15rem;
     padding: 1.2rem 1rem;
     border: none;
     border-left: 0.5rem solid $secondary-color;
@@ -36,6 +36,10 @@
 
     &:focus {
       border-left: 0.5rem solid $third-color;
+    }
+
+    @include md {
+      height: 25rem;
     }
   }
 }
