--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,15 @@
   box-sizing: border-box;
 }
 
+html {
+  @include md {
+    font-size: 20px;
+  }
+  @include lg {
+    font-size: 16px;
+  }
+}
+
 body {
   font-family: 'Source Sans Pro', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   -webkit-font-smoothing: antialiased;
